tests/baselines/reference/parserSetAccessorWithTypeParameters1(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserSetAccessorWithTypeParameters1.ts(2,8): error TS1094: An accessor cannot have type parameters.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserSetAccessorWithTypeParameters1.ts (1 errors) ====
    class C {
       set foo<T>(v) { }
           ~~~
!!! error TS1094: An accessor cannot have type parameters.
    }